--- a/StockTickerApp/views/index.ejs
+++ b/StockTickerApp/views/index.ejs
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, intial scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+<title>StockTicker</title>
+
+<!-- Bootstrap -->
+<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<body>
+	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="/bootstrap/js/bootstrap.min.js"></script>
+	<% include Common/Header.ejs %>
+	<h1>Hello, world!</h1>
+</body>
+</
