--- a/StockTickerApp/views/game.ejs
+++ b/StockTickerApp/views/game.ejs
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Game On!</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, intial scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+<title>StockTicker</title>
+
+<!-- Bootstrap -->
+<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<body>
 	<script src="/bootstrap/js/bootstrap.min.js"></script>
 	<% include Common/Header.ejs %>
 	<div class="jumbotron">
 		<h1>StockTicker</h1>
 		<p>Let's Play!</p>
 	</div>
-
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-8">
@@ -19,7 +23,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="well">
-					<h1>Hello></h1>
+					<h1>Hello</h1>
 				
 					<%- include('Common/player.ejs') %>
 				</div>
