--- a/StockTickerApp/views/Common/player.ejs
+++ b/StockTickerApp/views/Common/player.ejs
@@ -1,10 +1,34 @@
 
 <div class="list-group">
 	<a class="list-group-item active"><%= title %></a> 
-	<a class="list-group-item"><span class="glyphicon glyphicon-tint" aria-hidden="true"></span>     Oil</a> 
-	<a class="list-group-item"><span class="glyphicon glyphicon-grain" aria-hidden="true"></span>     Grain</a>
-	<a class="list-group-item"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span>     Industrial</a>
-	<a class="list-group-item"><span class="glyphicon glyphicon-usd" aria-hidden="true"></span>     Silver</a>
-	<a class="list-group-item"><span class="glyphicon glyphicon-gbp" aria-hidden="true"></span>     Gold</a>
-	<a class="list-group-item"><span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>     Bonds</a>
+	<a class="list-group-item"><span class="glyphicon glyphicon-tint" aria-hidden="true" id="oill"></span>     Oil</a> 
+	<a class="list-group-item"><span class="glyphicon glyphicon-grain" aria-hidden="true" id="grainn"></span>     Grain</a>
+	<a class="list-group-item"><span class="glyphicon glyphicon-cog" aria-hidden="true" id="industriall"></span>     Industrial</a>
+	<a class="list-group-item"><span class="glyphicon glyphicon-usd" aria-hidden="true" id="silverr"></span>     Silver</a>
+	<a class="list-group-item"><span class="glyphicon glyphicon-gbp" aria-hidden="true" id="goldd"></span>     Gold</a>
+	<a class="list-group-item"><span class="glyphicon glyphicon-duplicate" aria-hidden="true" id="bondss"></span>     Bonds</a>
 </div>
+
+<script>
+	$(function() {
+		$
+				.ajax({
+					url : 'https://api.mongolab.com/api/1/databases/mongodb-sss/collections/stocks?q={"name": "Shan"}&apiKey=u09aDBLJVfRGH9RWvtggWt4DiTYQ2tFt',
+					type : 'GET',
+					contentType : "application/json",
+					success : function(data) {				
+						document.getElementById("oill").innerHTML = data[0].oil;
+						document.getElementById("grainn").innerHTML = data[0].grain;
+						document.getElementById("industriall").innerHTML = data[0].industrial;
+						document.getElementById("silverr").innerHTML = data[0].silver;
+						document.getElementById("goldd").innerHTML = data[0].gold;
+						document.getElementById("bondss").innerHTML = data[0].bonds;
+						
+
+					},
+					error : function(XMLHttpRequest, textStatus, errorThrown) {
+						console.log('error', errorThrown);
+					}
+				});
+	});
+</script>
